tests/paczka1/fuzzy1/77711603.err
Error in line 1: 3OPNAckPv A366 3,0
Error in line 13: 3OPNAckPv S730 6,2
Error in line 24: Iqb S730 65,1
